# Claude-Builder-Hacks

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TESTING.md  app.py  docker-compose.yml  docker-start.sh  main.py  migrate_tech_stack.py  project_tracker.db  project_tracker.db copy  pyproject.toml  requirements.txt  start.sh  test_intelligent_assignment.py
docs/: AlturaSoft_Org_Onboarding_Data.docx  Org_data.tex  SWE_new_micro_devices_deploy.tex  automated_rls_generator.tex  vocal_lift_Sop.tex  ~$turaSoft_Org_Onboarding_Data.docx
mcp_server/: __init__.py  config.json  flask_integration.py  server.py
static/: team_dashboard.js
templates/: dashboard.html  index.html  mcp_actions_tester.html  mindmap.html  onboarding.html  team_dashboard.html
