[project]
name = "claude-builder-hacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "Flask-SQLAlchemy>=3.1.1",
    "PyPDF2>=3.0.0",
    "flask-cors>=5.0.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.5",
]
